[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/map.png" type="Texture" id=1]
[ext_resource path="res://materials/BgMaterial.tres" type="Material" id=2]
[ext_resource path="res://scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://scenes/GameOverUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/MainMenuUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Hud.tscn" type="PackedScene" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
tonemap_mode = 1
tonemap_white = 2.06
glow_enabled = true
glow_blend_mode = 0
glow_bicubic_upscale = true
glow_high_quality = true

[node name="root" type="Node2D"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 477, 333 )
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 600

[node name="Map" type="Sprite" parent="."]
material = ExtResource( 2 )
scale = Vector2( 0.375, 0.3375 )
z_index = -100
texture = ExtResource( 1 )
centered = false

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Hud" parent="UI" instance=ExtResource( 8 )]

[node name="MainMenu" parent="UI" instance=ExtResource( 6 )]
visible = false

[node name="GameOver" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="PauseMenu" parent="UI" instance=ExtResource( 7 )]
visible = false

[connection signal="exit" from="UI/MainMenu" to="." method="_on_exit"]
[connection signal="restart" from="UI/MainMenu" to="." method="_on_restart"]
[connection signal="exit" from="UI/GameOver" to="." method="_on_exit"]
[connection signal="main_menu" from="UI/GameOver" to="." method="_on_main_menu"]
[connection signal="restart" from="UI/GameOver" to="." method="_on_restart"]
[connection signal="exit" from="UI/PauseMenu" to="." method="_on_exit"]
[connection signal="main_menu" from="UI/PauseMenu" to="." method="_on_main_menu"]
[connection signal="restart" from="UI/PauseMenu" to="." method="_on_restart"]
[connection signal="resume" from="UI/PauseMenu" to="." method="_on_resume"]
